[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pigpiod"
version = "0.1.2"
description = "Raspberry Pi GPIO utilities with mock support"
requires-python = ">=3.8"
authors = [
    { name = "nos" },
]
dependencies = [
    "gpiod; sys_platform == 'linux'",
    "asyncio",
]

# If you have a README.md, uncomment the next line:
readme = "README.md"

# Optional classifiers for PyPI metadata (nice to have)
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]
