[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pigpiod"
version = "0.1.3"
description = "Raspberry Pi GPIO utilities with mock support"
requires-python = ">=3.8"
authors = [
    { name = "nos" },
]
dependencies = [
    "gpiod; sys_platform == 'linux'",
    "asyncio",
]
