[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevated_ps"
version = "0.1.3"
description = "Windows utility helpers for Python, including elevated PowerShell execution"
authors = [
    { name = "nos" }
]
requires-python = ">=3.7"

dependencies = []

# if you want CLI commands in the future
# [project.scripts]
# run-elevated-ps = "winutils:elevated_ps"
