[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pca9685"
version = "0.1.0"
description = "PCA9685 16-channel 12-bit PWM controller wrapper with optional mock support"
authors = [
    { name = "nos" },
]
requires-python = ">=3.7"

dependencies = [
    "i2c>=0.1.0",
    "smbus2"
]
