[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcf8574"
version = "0.1.4"
description = "PCF8574 I2C IO expander wrapper with optional mock support"
authors = [
    { name = "nos" },
]
requires-python = ">=3.7"

dependencies = [
    "i2c>=0.1.0",
    "smbus2"
]

